fix main template

--- a/static/css/__includes/navigation.css
+++ b/static/css/__includes/navigation.css
@@ -37,7 +37,7 @@ nav .auth-button {
   right: 0;
   font-size: 16px;
   color: #333;
-  background: #fff66d;
+  background: #fffbbb;
   text-transform: none;
 }
 nav .auth-user {
