--- a/static/css/__includes/navigation.less
+++ b/static/css/__includes/navigation.less
@@ -42,7 +42,7 @@ nav {
       right: 0;
       font-size: 16px;
       color: #333;
-      background: #fff66d;
+      background: #fffbbb;
       text-transform: none;
     }
     &-user {
