--- a/static/css/style.less
+++ b/static/css/style.less
@@ -40,6 +40,12 @@ header, footer, #block_1, #block_2, #block_3, #block_4, #block_5, #block_6,
     display: inline-block;
     vertical-align: top;
   }
+  &-third {
+    width: 33%;
+    position: relative;
+    display: inline-block;
+    vertical-align: top;
+  }
 }
 .text {
   &-center {
@@ -347,6 +353,7 @@ header {
 
 .block10 {
   background: url("../img/block_10_bg.jpg");
+  background-size: 100%;
   .container {
     background-image: url('../img/block10_content_bg.png');
   }
@@ -546,7 +553,7 @@ header {
   }
 }
 
-footer {
+.block14 {
   background: #21a8ff;
   padding-top: 30px;
 }
@@ -599,18 +606,44 @@ label.error {
     height: 40px;
   }
 }
-.address {
+.footer {
   padding: 20px 0;
   background: #2C3E50;
-  address {
-    padding: 25px 0;
-    color: #fff;
-    ul {
-      list-style: none;
-      text-align: center;
-      li {
-        margin-bottom: 10px;
+  color: #fff;
+  &__title {
+    display: block;
+    font-weight: bold;
+    margin-top: 20px;
+    margin-left: 50px;
+  }
+  ul {
+    list-style: none;
+    margin-top: 10px;
+    margin-left: 50px;
+    li {
+      color: #898989;
+    }
+  }
+  &-social {
+    margin-top: 10px;
+  }
+  &-menu {
+    &__item {
+      a {
+        color: #898989
       }
+    }
+  }
+  .icon {
+    background-repeat: no-repeat;
+    -ms-background-position-y: 50%;
+    background-position-y: 50%;
+    padding-left: 25px;
+    &-phone {
+      background-image: url('../img/phone_ico.png');
+    }
+    &-letter {
+      background-image: url('../img/letter_ico.png');
     }
   }
 }
