--- a/static/css/style.less
+++ b/static/css/style.less
@@ -609,8 +609,8 @@ label.error {
 .footer {
   padding: 20px 0;
   background: #2C3E50;
-  color: #fff;
   &__title {
+    color: #fff;
     display: block;
     font-weight: bold;
     margin-top: 20px;
@@ -621,7 +621,7 @@ label.error {
     margin-top: 10px;
     margin-left: 50px;
     li {
-      color: #898989;
+      color: #ccc;
     }
   }
   &-social {
@@ -630,7 +630,7 @@ label.error {
   &-menu {
     &__item {
       a {
-        color: #898989
+        color: #ccc
       }
     }
   }
