--- a/static/css/style.less
+++ b/static/css/style.less
@@ -367,14 +367,14 @@ header {
     list-style: none;
     width: 670px;
     margin: 0 auto;
-    padding-bottom: 20px;
+    padding-bottom: 50px;
     li {
-
+me
       &:last-child {
         margin-bottom: 0;
       }
       .content {
-        min-height: 75px;
+        min-height: 100px;
         width: 510px;
         display: table;
         color: #fff;
