--- a/templates/__includes/menu.html
+++ b/templates/__includes/menu.html
@@ -1,7 +1,7 @@
 <nav>
   <ul>
     <li class="active"><a href="#" class="icon-about">О НАС</a></li>
-    <li><a href="#" class="icon-reviews">ОТЗЫВЫ</a></li>
+    <li><a href="#" class="icon-reviews">ЖУРНАЛ ПЕТЕШЕСТВИЙ</a></li>
     <li><a href="#" class="icon-group">ГРУППОВЫЕ ТУРЫ</a></li>
   </ul>
   {% if user.is_authenticated %}
