--- a/static/css/style.less
+++ b/static/css/style.less
@@ -407,8 +407,17 @@ me
       background-image: url('../img/block_10_4.png');
       height: 100px;
     }
-    &-5 {
-      background-image: url('../img/block_10_5.png');
+    &-6 {
+      background-image: url('../img/block_10_6.png');
+    }
+    &-7 {
+      background-image: url('../img/block_10_7.png');
+    }
+    &-8 {
+      background-image: url('../img/block_10_8.png');
+    }
+    &-9 {
+      background-image: url('../img/block_10_9.png');
     }
   }
 }
