--- a/templates/index.html
+++ b/templates/index.html
@@ -206,7 +206,7 @@
 {#                <div class="icon">#}
 {#                  <img src="{{ STATIC_URL }}img/default-icon.png" alt=""/>#}
 {#                </div>#}
-                <div class="content block10-icon">
+                <div class="content block10-icon block10-icon-6">
                     <p>Англоговорящий водитель гид.</p>
                 </div>
                 <div class="clear"></div>
@@ -215,7 +215,7 @@
 {#                <div class="icon">#}
 {#                  <img src="{{ STATIC_URL }}img/default-icon.png" alt=""/>#}
 {#                </div>#}
-                <div class="content block10-icon">
+                <div class="content block10-icon block10-icon-7">
                     <p>Входная плата в Национальные парки по утверждённому маршруту.</p>
                 </div>
                 <div class="clear"></div>
@@ -224,7 +224,7 @@
 {#                <div class="icon">#}
 {#                  <img src="{{ STATIC_URL }}img/default-icon.png" alt=""/>#}
 {#                </div>#}
-                <div class="content block10-icon">
+                <div class="content block10-icon block10-icon-8">
                     <p>Вода в машине.</p>
                 </div>
                 <div class="clear"></div>
@@ -233,8 +233,8 @@
 {#                <div class="icon">#}
 {#                  <img src="{{ STATIC_URL }}img/default-icon.png" alt=""/>#}
 {#                </div>#}
-                <div class="content block10-icon">
-                    <p>Местаная симкарта с небольшим балансом для круглосуточной телефонной поддержки на русском языке.</p>
+                <div class="content block10-icon block10-icon-9">
+                    <p>Местная симкарта с небольшим балансом для круглосуточной телефонной поддержки на русском языке.</p>
                 </div>
                 <div class="clear"></div>
               </li>
