--- a/static/css/__includes/navigation.less
+++ b/static/css/__includes/navigation.less
@@ -19,6 +19,11 @@ nav {
           opacity: 0.6;
           color: #f2f2f2;
         }
+        &.active {
+          text-decoration: none;
+          text-shadow: 0 0 2px red;
+          color: #f2eec7;
+        }
       }
       .icon {
         &-group {
