--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,6 +21,11 @@ nav ul li a:hover {
   opacity: 0.6;
   color: #f2f2f2;
 }
+nav ul li a.active {
+  text-decoration: none;
+  text-shadow: 0 0 2px red;
+  color: #f2eec7;
+}
 nav ul li .icon-group {
   background-image: url('../img/menu-icon-group.png');
 }
@@ -114,6 +119,23 @@ h1 {
 }
 h2 {
   text-shadow: 2px 8px 6px rgba(0, 0, 0, 0.2), 0px -5px 35px rgba(255, 255, 255, 0.3);
+}
+.title_big {
+  font-size: 36px;
+  font-weight: bold;
+  margin-top: 20px;
+}
+.title_middle {
+  font-size: 24px;
+  font-weight: bold;
+  color: #fff;
+  padding: 10px 0;
+  background-image: -webkit-linear-gradient(top, #428bca 0%, #357ebd 100%);
+  background-image: -o-linear-gradient(top, #428bca 0%, #357ebd 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#428bca), to(#357ebd));
+  background-image: linear-gradient(to bottom, #428bca 0%, #357ebd 100%);
+  background-repeat: repeat-x;
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff428bca', endColorstr='#ff357ebd', GradientType=0);
 }
 form.ticket {
   text-align: center;
@@ -844,33 +866,94 @@ label.error {
   -ms-animation: puff-in 1000ms linear 0ms infinite normal, puff-out 1000ms linear 0ms infinite normal;
   animation: puff-in 1000ms linear 0ms infinite normal, puff-out 1000ms linear 0ms infinite normal;
 }
-.modal_video {
-  display: none;
-  z-index: 10;
-  width: 600px;
-  height: 400px;
-  background: #f1f1f1;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  margin-top: -200px;
-  margin-left: -300px;
-  text-align: center;
-  box-shadow: 0 0 10px #999;
-}
-.modal_video .close {
-  position: absolute;
-  top: -30px;
-  right: -10px;
-  border-radius: 20px;
-  width: 30px;
-  height: 30px;
-  background: #fd8a8a;
-}
-.modal_video iframe {
-  width: 100% !important;
-  height: 100% !important;
-}
 .notifyjs-corner {
   z-index: 9999 !important;
+}
+.about {
+  margin: 20px 0 40px;
+}
+.about__title {
+  text-align: center;
+  line-height: 70px;
+}
+.about img {
+  max-width: 100%;
+}
+.travels {
+  padding: 30px 0;
+}
+.travels__bg {
+  background-image: url('../img/travels__bg.jpg');
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+.travels-list {
+  list-style: none;
+  text-align: center;
+}
+.travels-list__item {
+  display: inline-block;
+}
+.travels-review-item {
+  width: 90%;
+  margin-bottom: 40px;
+}
+.travels-review-item-cover__img {
+  background-color: #000;
+}
+.travels-review-item-cover__img:hover {
+  opacity: .5;
+  -moz-opacity: .5;
+  filter: alpha(opacity=50) #000000;
+  -khtml-opacity: .5;
+}
+.travels-review-item__travel {
+  color: #666;
+  padding: 10px 0;
+}
+.travels-review-item__title {
+  font-size: 16px;
+}
+.travels-author {
+  margin-bottom: 40px;
+}
+.travels-author-item {
+  border: 1px solid #ccc;
+  margin: 10px 0;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  padding: 10px;
+}
+.travels-author-item:hover {
+  background: #f1f1f1;
+}
+.travels-author-item__avatar {
+  display: inline-block;
+  width: 20%;
+  text-align: center;
+  vertical-align: top;
+}
+.travels-author-item-content {
+  display: inline-block;
+  width: 69%;
+}
+.travels-author-item-content__name {
+  font-weight: bold;
+  padding: 10px 0;
+}
+.travels-author-item-content__text {
+  margin-bottom: 10px;
+}
+.travels-author .button {
+  padding: 21px;
+  color: #101b3f;
+  background: #fff66d;
+  text-transform: uppercase;
+  font-size: 28px;
+  display: block;
+  margin: 25px auto !important;
+  width: 250px;
+  border-radius: 10px;
 }
