--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
     </script>
 </head>
 <body>
-<div id="wrapper">
+<div id="wrapper" {% block wrapper_style %}{% endblock %}>
   {% include '__includes/header.html' %}
 {% block content %}
 {% endblock %}
