--- a/static/css/__includes/travel.less
+++ b/static/css/__includes/travel.less
@@ -47,7 +47,7 @@
       border-radius: 5px;
       padding: 10px;
       &:hover {
-        background: #f1f1f1;
+        background: rgba(255, 255, 255, 0.5);
       }
       &__avatar {
         display: inline-block;
