fix about  page

--- a/apps/about/templates/about/about_list.html
+++ b/apps/about/templates/about/about_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block wrapper_style %}class="travels__bg"{% endblock %}
 {% block content %}
   <div class="container">
   {% for article in about_list %}
