fix footer menu

--- a/templates/__includes/footer.html
+++ b/templates/__includes/footer.html
@@ -13,8 +13,8 @@
     <div class="col-third">
       <span class="footer__title">Страницы</span>
       <ul class="footer-menu">
-        <li class="footer-menu__item"><a href="#">О нас</a></li>
-        <li class="footer-menu__item"><a href="#">Отзывы</a></li>
+        <li class="footer-menu__item"><a href="{% url 'about:list' %}">О нас</a></li>
+        <li class="footer-menu__item"><a href="{% url 'travel:list' %}">Журнал путешествий</a></li>
         <li class="footer-menu__item"><a href="#">Групповые туры</a></li>
       </ul>
     </div>
