--- a/static/css/style.css
+++ b/static/css/style.css
@@ -958,3 +958,12 @@ label.error {
   border-radius: 10px;
   text-align: center;
 }
+.article {
+  padding-bottom: 40px;
+}
+.article__title {
+  margin: 20px 0;
+}
+.article__cover {
+  margin-bottom: 20px;
+}
