add profile page

--- a/apps/travel/templates/travel/travel_comment.html
+++ b/apps/travel/templates/travel/travel_comment.html
@@ -10,7 +10,7 @@
         </div>
         <div class="travels-comment-item-text panel-body">
           <div class="travels-comment-item-text__avatar">
-            <img src="{{ STATIC_URL }}img/author-default.png" alt="">
+            <img src="{{ user.avatar.image.url }}" alt="">
           </div>
           <div class="travels-comment-item-text__content">
             <p class="travels-comment-item__user">{{ comment.user }}</p>
