--- a/static/css/__includes/navigation.css
+++ b/static/css/__includes/navigation.css
@@ -48,6 +48,7 @@ nav .auth-button {
 nav .auth-user {
   display: block;
   position: absolute;
+  color: #fff;
   top: 0;
   right: 0;
   text-shadow: 1px 1px 1px #ff5c5c;
