--- a/static/css/__includes/navigation.less
+++ b/static/css/__includes/navigation.less
@@ -53,6 +53,7 @@ nav {
     &-user {
       display: block;
       position: absolute;
+      color: #fff;
       top: 0;
       right: 0;
       text-shadow: 1px 1px 1px rgb(255, 92, 92);
