--- a/static/css/__includes/travel.less
+++ b/static/css/__includes/travel.less
@@ -58,6 +58,12 @@
         width: 20%;
         text-align: center;
         vertical-align: top;
+        img {
+          width: 124px;
+          -webkit-border-radius: 124px;
+          -moz-border-radius: 124px;
+          border-radius: 124px;
+        }
       }
       &-content {
         display: inline-block;
@@ -125,6 +131,12 @@
           width: 20%;
           text-align: center;
           vertical-align: top;
+          img {
+            width: 124px;
+            -webkit-border-radius: 124px;
+            -moz-border-radius: 124px;
+            border-radius: 124px;
+          }
         }
         &__content {
           display: inline-block;
