--- a/static/css/style.less
+++ b/static/css/style.less
@@ -765,3 +765,4 @@ label.error {
 @import "__includes/about.less";
 @import "__includes/travel.less";
 @import "__includes/article.less";
+@import "__includes/profile.less";
