--- a/static/css/__includes/travel.css
+++ b/static/css/__includes/travel.css
@@ -58,6 +58,12 @@
   text-align: center;
   vertical-align: top;
 }
+.travels-author-item__avatar img {
+  width: 124px;
+  -webkit-border-radius: 124px;
+  -moz-border-radius: 124px;
+  border-radius: 124px;
+}
 .travels-author-item-content {
   display: inline-block;
   width: 69%;
@@ -125,6 +131,12 @@
   width: 20%;
   text-align: center;
   vertical-align: top;
+}
+.travels-comment-item-text__avatar img {
+  width: 124px;
+  -webkit-border-radius: 124px;
+  -moz-border-radius: 124px;
+  border-radius: 124px;
 }
 .travels-comment-item-text__content {
   display: inline-block;
