--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,7 +17,7 @@
             <form method="post" action="" id="personal_info_form" role="form" class="profile-info" enctype="multipart/form-data">{% csrf_token %}
               <label for="email">e-mail:</label>
               <input type="text" name="email" id="email" class="form-control" placeholder="e-mail" value="{{ user.email|default:'' }}">
-              <input type="hidden" name="user" id="username" class="form-control" placeholder="e-mail" value="{{ user.id }}">
+              <input type="hidden" name="user" id="username" class="form-control" placeholder="e-mail" value="{{ user.pk }}">
               <label for="first_name">Имя:</label>
               <input type="text" name="first_name" id="first_name" class="form-control" placeholder="Имя" value="{{ user.first_name|default:'' }}">
               <label for="last_name">Фамилия:</label>
