--- a/static/css/__includes/travel.less
+++ b/static/css/__includes/travel.less
@@ -40,6 +40,20 @@
         font-size: 16px;
       }
     }
+    &-change, &-add {
+      &-form {
+        input[type=text], select {
+          width: 400px;
+        }
+        label {
+          display: block;
+          margin-top: 20px;
+        }
+        .btn {
+          margin: 20px 0;
+        }
+      }
+    }
   }
   &-author {
     margin-bottom: 40px;
