--- a/static/css/style.css
+++ b/static/css/style.css
@@ -920,6 +920,19 @@ label.error {
 .travels-review-item__title {
   font-size: 16px;
 }
+.travels-review-change-form input[type=text],
+.travels-review-add-form input[type=text],
+.travels-review-change-form select,
+.travels-review-add-form select {
+  width: 400px;
+}
+.travels-review-change-form label, .travels-review-add-form label {
+  display: block;
+  margin-top: 20px;
+}
+.travels-review-change-form .btn, .travels-review-add-form .btn {
+  margin: 20px 0;
+}
 .travels-author {
   margin-bottom: 40px;
 }
@@ -1032,6 +1045,7 @@ label.error {
 }
 .article__cover {
   margin-bottom: 20px;
+  text-align: center;
 }
 .profile {
   padding-bottom: 40px;
