--- a/apps/travel/templates/travel/travel_comment.html
+++ b/apps/travel/templates/travel/travel_comment.html
@@ -10,7 +10,7 @@
         </div>
         <div class="travels-comment-item-text panel-body">
           <div class="travels-comment-item-text__avatar">
-            <img src="{{ user.avatar.image.url }}" alt="">
+            <img src="{% if comment.user.avatar %}{{ comment.user.avatar.image.url }}{% else %}{{ STATIC_URL }}img/no_avatar.gif{% endif %}" alt="">
           </div>
           <div class="travels-comment-item-text__content">
             <p class="travels-comment-item__user">{{ comment.user }}</p>
