--- a/templates/profile.html
+++ b/templates/profile.html
@@ -32,9 +32,26 @@
           </div>
         </div>
         <div class="tab-pane" id="article">
-          {% for article in user.travelreview_set.all %}
-            {{ article }} - {{ article.created }}
-          {% endfor %}
+          <table class="table table-hover">
+            <thead>
+            <tr>
+              <th>#ID</th>
+              <th>Заголовок</th>
+              <th>Дата создания</th>
+              <th></th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for article in user.travelreview_set.all %}
+            <tr>
+              <td><a href="{{ article.get_absolute_url }}">#{{ article.id }}</a></td>
+              <td><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></td>
+              <td>{{ article.created }}</td>
+              <td><a href="{{ article.get_change_url }}" class="btn btn-info">редактировать</a></td>
+            </tr>
+            {% endfor %}
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
