--- a/templates/__includes/footer.html
+++ b/templates/__includes/footer.html
@@ -15,7 +15,7 @@
       <ul class="footer-menu">
         <li class="footer-menu__item"><a href="{% url 'about:list' %}">О нас</a></li>
         <li class="footer-menu__item"><a href="{% url 'travel:list' %}">Журнал путешествий</a></li>
-        <li class="footer-menu__item"><a href="#">Групповые туры</a></li>
+        <li class="footer-menu__item"><a href="{% url 'groups:list' %}">Групповые туры</a></li>
       </ul>
     </div>
     <div class="col-third">
