--- a/templates/__includes/menu.html
+++ b/templates/__includes/menu.html
@@ -2,7 +2,7 @@
   <ul>
     <li><a href="{% url 'about:list' %}" class="icon-about">О НАС</a></li>
     <li><a href="{% url 'travel:list' %}" class="icon-reviews">ЖУРНАЛ ПЕТЕШЕСТВИЙ</a></li>
-    <li><a href="#" class="icon-group">ГРУППОВЫЕ ТУРЫ</a></li>
+    <li><a href="{% url 'groups:list' %}" class="icon-group">ГРУППОВЫЕ ТУРЫ</a></li>
   </ul>
   {% if user.is_authenticated %}
     <a href="{% url 'profile' %}" class="auth-user">{{ user.email }}</a>
