--- a/static/css/style.less
+++ b/static/css/style.less
@@ -766,3 +766,4 @@ label.error {
 @import "__includes/travel.less";
 @import "__includes/article.less";
 @import "__includes/profile.less";
+@import "__includes/groups.less";
